--- a/security.yml
+++ b/security.yml
@@ -36,3 +36,14 @@
         state: present
         validate: 'visudo -cf %s'
         backup: true
+
+    - name: Remove unused packages
+      ansible.builtin.apt:
+        name:
+          - python3-pip
+          - python3-django
+          - python3-pymysql
+          - mariadb-server
+          - apache2
+        state: absent
+        purge: true
