Security: Set permissions on desired files
- Make sure sshd_config ownership and permissions are set properly

--- a/security.yml
+++ b/security.yml
@@ -47,3 +47,10 @@
           - apache2
         state: absent
         purge: true
+
+    - name: Set file permissions
+      ansible.builtin.file:
+        path: /etc/ssh/sshd_config
+        owner: root
+        group: root
+        mode: '0644'
