Security: add task for system update
- Do apt update and apt dist-upgrade
- Remove unnecessary comment from .ansible-lint
- Configure .yamllint to allow 'yes' and 'no' boolean values

--- a/security.yml
+++ b/security.yml
@@ -54,3 +54,8 @@
         owner: root
         group: root
         mode: '0644'
+
+    - name: System update
+      ansible.builtin.apt:
+        upgrade: dist
+        update_cache: yes
