--- a/security.yml
+++ b/security.yml
@@ -55,7 +55,18 @@
         group: root
         mode: '0644'
 
-    - name: System update
+    - name: Install unattended-upgrades package
       ansible.builtin.apt:
-        upgrade: dist
-        update_cache: yes
+        name: unattended-upgrades
+        state: present
+
+    - name: Copy unattended-upgrades configuration files
+      ansible.builtin.template:
+        src: 'templates/{{ item }}.j2'
+        dest: '/etc/apt/apt.conf.d/{{ item }}'
+        owner: root
+        group: root
+        mode: 0644
+      with_items:
+        - 20auto-upgrades
+        - 50unattended-upgrades
