Make a use of Ansible Vault
- Create vault.yml file to store secrets
- Use vars from secret file in sysprep playbook
- Create shell script to retrieve vault pass from Keychain
- Configure ansible to use shell script as vault_password_file

--- a/sysprep.yml
+++ b/sysprep.yml
@@ -2,9 +2,12 @@
 - hosts: templates
   become: true
 
+  vars_files:
+    - vault.yml
+
   tasks:
     - name: Reset machine-id
-      tags: machine-id
+      tags: machine_id
       block:
         - name: Make /etc/machine-id a 0-byte file
           community.general.filesize:
