sysprep: adds feature setting up hostname
- add hosts to inventory with minor fixups
- add handler for restarting ssh
- remove dhclient path from lease files

--- a/hosts.ini
+++ b/hosts.ini
@@ -1,5 +1,5 @@
 [templates]
-192.168.64.3  # debian-template UTM virtual machine
+debian-template.utm
 
 [testing]
 debian-vm.local
@@ -10,7 +10,8 @@ debian-vm.local
 
 # Database server
 [db]
-debian-vm.local
+mdb1.utm
+mdb2.utm
 
 # Group 'multi' with all servers
 [multi:children]
