--- a/sysprep.yml
+++ b/sysprep.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: templates
+- hosts: all
   become: true
 
   vars_files:
@@ -10,6 +10,12 @@
       ansible.builtin.service:
         name: networking
         state: restarted
+
+    - name: restart_ssh
+      ansible.builtin.service:
+        name: ssh
+        state: restarted
+
 
   tasks:
     - name: Reset machine-id
@@ -44,7 +50,6 @@
           ansible.builtin.find:
             paths:
               - /var/lib/dhcp
-              - /var/lib/dhclient
           register: dhcp_lease
 
         - name: Remove DHCP lease files
@@ -76,6 +81,7 @@
             cmd: dpkg-reconfigure openssh-server
           register: openssh_server_recon
           changed_when: '"Creating" in openssh_server_recon.stderr'
+          notify: restart_ssh
 
 
     - name: Remove root and users history
@@ -96,3 +102,23 @@
             path: '{{ item.path }}'
             state: absent
           with_items: '{{ history.files }}'
+
+
+    - name: Setup hostname
+      tags: hostname
+      block:
+        - name: Modify /etc/hostname
+          ansible.builtin.template:
+            dest: /etc/hostname
+            src: hostname.j2
+
+        - name: Modify /etc/hosts
+          ansible.builtin.lineinfile:
+            path: /etc/hosts
+            search_string: "127.0.1.1"
+            line: "127.0.1.1\t{{ inventory_hostname }}\t{{ hostname }}"
+
+        - name: Setup hostname
+          ansible.builtin.hostname:
+            name: '{{ hostname }}'
+            use: debian
