fixups: modify rules in .yamllint and sysprep yaml
- add .yamllint rule to extend valid line length
- in sysprep dhcp lease files use only single path

--- a/sysprep.yml
+++ b/sysprep.yml
@@ -48,8 +48,7 @@
       block:
         - name: Find DHCP lease files
           ansible.builtin.find:
-            paths:
-              - /var/lib/dhcp
+            paths: /var/lib/dhcp
           register: dhcp_lease
 
         - name: Remove DHCP lease files
